--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-syntax-bigint": "^7.8.3",
+    "@babel/plugin-syntax-flow": "^7.14.5",
     "@babel/plugin-transform-optional-chaining": "^7.22.5",
     "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@babel/preset-env": "^7.22.5",
@@ -18,6 +18,7 @@
     "@typescript-eslint/parser": "5.59.9",
     "auto-bind": "^5.0.1",
     "autoprefixer": "7.1.6",
+    "axios": "^0.21.1",
     "babel-jest": "24.8.0",
     "babel-loader": "^8.3.0",
     "babel-plugin-named-asset-import": "^0.3.2",
@@ -39,9 +40,9 @@
     "events": "^3.3.0",
     "file-loader": "3.0.1",
     "fili": "^2.0.3",
-    "firebase": "^9.13.0",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "^4.0.0-beta.5",
+    "http-proxy-middleware": "^3.0.3",
     "immutability-helper": "^2.7.1",
     "ismobilejs": "^0.4.1",
     "jest": "20.0.4",
@@ -75,8 +76,6 @@
     "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
-    "@firebase/app-types": "0.x",
-    "@firebase/util": "0.x",
     "cheerio": "^1.0.0-rc.2",
     "child_process": "^1.0.2",
     "gh-pages": "^1.2.0",
